--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,12 +29,14 @@
             android:layout_height="wrap_content"/>
 
     <!-- Navigation to Register -->
+    <!-- Navigation to Register -->
     <TextView
             android:id="@+id/textViewRegister"
-            android:textSize="18sp"
             android:text="Don't have an account? Register here"
+            android:textSize="16sp"
             android:layout_marginTop="16dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
 </LinearLayout>
