--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"
-            android:layout_gravity="start|top"
+            android:layout_gravity="center|bottom"
             android:layout_margin="16dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
