--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
@@ -5,38 +6,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <!-- Email Input -->
+    <TextView
+            android:id="@+id/textViewEmailLabel"
+            android:text="Email"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     <EditText
             android:id="@+id/editTextEmail"
-            android:hint="Email"
+            android:hint="Enter your email"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"/>
 
-    <!-- Password Input -->
-    <EditText
-            android:id="@+id/editTextPassword"
-            android:hint="Password"
-            android:inputType="textPassword"
+    <TextView
+            android:id="@+id/textViewPasswordLabel"
+            android:text="Password"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <!-- Login Button -->
+    <EditText
+            android:id="@+id/editTextPassword"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"/>
+
     <Button
             android:id="@+id/buttonLogin"
             android:text="Login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <!-- Navigation to Register -->
-    <!-- Navigation to Register -->
     <TextView
             android:id="@+id/textViewRegister"
             android:text="Don't have an account? Register here"
             android:textSize="16sp"
+            android:textColor="@color/design_default_color_primary"
             android:layout_marginTop="16dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
 </LinearLayout>
