Favourite feature implemented

--- a/app/src/main/res/layout/activity_add_edit_movie.xml
+++ b/app/src/main/res/layout/activity_add_edit_movie.xml
@@ -34,6 +34,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+        <CheckBox
+                android:id="@+id/checkBoxFavorite"
+                android:text="Mark as Favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"/>
+
         <Button
                 android:id="@+id/buttonSave"
                 android:text="Save"
